Сделал пару практических

--- a/TravelAgency/TravelAgency/TravelAgency.csproj
+++ b/TravelAgency/TravelAgency/TravelAgency.csproj
@@ -8,4 +8,8 @@
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TravelAgency.Domain\TravelAgency.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
