сделал пару практических

--- a/TravelAgency/TravelAgency/appsettings.json
+++ b/TravelAgency/TravelAgency/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=BookStore;Username=postgres;password=111111"
+  }
 }
+
